<resources>
    <string name="app_name">友问友帮</string>
    <string name="comment">设计备注</string>
    <string name="district">地区</string>
    <string name="effect">口碑</string>
    <string name="sendmessage">发消息</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="selfestimate">自我评价</string>
    <string name="cannotsee">不看TA发布的任务</string>
    <string name="cannotseecancle">取消不看TA发布的任务</string>
    <string name="whocannotsee">不让TA看我发布的任务</string>
    <string name="whocannotseecancle">取消不让TA看我发布的任务</string>
    <string name="blacklist">黑名单</string>
    <string name="removeblacklist">移除黑名单</string>
    <string name="account">账号信息</string>
    <string name="newmessage">新消息通知</string>
    <string name="privacy">隐私设置</string>
    <string name="about">关于友问友帮</string>
    <string name="security">安全中心</string>
    <string name="exit">退出登入</string>
    <string name="ybnum">友帮号</string>
    <string name="telnum">手机号</string>
    <string name="modifypassword">修改密码</string>
    <string name="score">去评分</string>
    <string name="help">帮助与反馈</string>
    <string name="receivemessage">接收新消息通知</string>
    <string name="firstclass">一度朋友</string>
    <string name="secondclass">二度朋友</string>
    <string name="firstandsecond">一度和二度朋友</string>
    <string name="all">所有人</string>
    <string name="action_search">搜索</string>
    <string name="friendestimate">好友评价</string>
    <string name="orderestimate">交易评价</string>
    <string name="strengths">我的强项</string>
    <string name="hobby">我的爱好</string>
    <string name="credentials">有图为证</string>
    <string name="take_photo">拍照</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="select_from_local">从相册中选取</string>
    <string name="scan">扫一扫</string>
    <string name="addfriends">添加好友</string>
    <string name="search">搜索</string>
    <string name="send_require_order">老板模式</string>
    <string name="send_recommand_order">打工模式</string>
    <string name="viewfdinfo">查看帮友资料</string>
    <string name="collectorder">收藏本单</string>
    <string name="toporder">置顶本单</string>
    <string name="reportorder">举报本单</string>
    <string name="addoneclassfriend">添加TA为一度好友</string>
    <string name="viewrelationnet">查看我和TA的关系网</string>
    <string name="addblacklist">加入黑名单</string>
    <string name="report">举报</string>
    <string name="topfs">热门友商</string>
    <string name="nearby">附近的人</string>
    <string name="feedback">帮助与反馈</string>
    <string name="cancel_appley">取消申请</string>
    <string name="refund_apply">申请退款</string>
    <string name="agree">同意退款</string>
    <string name="disagree">拒绝退款</string>
    <string name="estimate">评价</string>
    <string name="dispute">申诉</string>
    <string name="close">关闭</string>
    <string name="qrcode">二维码名片</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="mobile">手机号</string>
    <string name="loading">加载中</string>
    <string name="delete">删除</string>
    <string name="name_author">实名认证</string>
    <string name="service_stop">终止服务</string>
    <string name="service_done">服务已完成</string>
    <string name="total">总计</string>
    <string name="pay">支付</string>
    <string name="payway">支付方式</string>
    <string name="paybyali">支付宝支付</string>
    <string name="paybyweixing">微信支付</string>
    <string name="ali">支付宝</string>
    <string name="weixing">微信</string>
    <string name="paybyyb">余额支付</string>
    <string name="payremainder">提示:如果您取消任务,或者任务过期，金额将立即退回余额</string>
    <string name="cost">总花费</string>
    <string name="revenue">总收益</string>
    <string name="cp_select_city">选择城市</string>
    <string name="cp_hot_city">热门城市</string>
    <string name="cp_located_city">定位城市</string>
    <string name="cp_hint_search_box">请输入城市名或拼音</string>
    <string name="cp_nothing_found">没有搜索结果~</string>
    <string name="cp_locating">正在定位…</string>
    <string name="cp_located_failed">定位失败</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_history_summary">Store your scans in History</string>
    <string name="preferences_history_title">Add to History</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
</resources>