<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include
        android:id="@+id/title_bar"
        layout="@layout/titlebar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/divide"
        />

    <TextView
        android:id="@+id/tv_account"
        style="@style/more_item_style"
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:drawableRight="@drawable/aliwx_arrow"
        android:text="@string/account" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide"
        />

    <TextView
        android:id="@+id/tv_newmessage"
        style="@style/more_item_style"
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:drawableRight="@drawable/aliwx_arrow"
        android:text="@string/newmessage" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide"
        />
    <TextView
        android:id="@+id/tv_privacy"
        style="@style/more_item_style"
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:drawableRight="@drawable/aliwx_arrow"
        android:text="@string/privacy" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide"
        />

    <TextView
        android:id="@+id/tv_about"
        style="@style/more_item_style"
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:drawableRight="@drawable/aliwx_arrow"
        android:text="@string/about" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide"
        />

    <!--<TextView-->
        <!--android:id="@+id/tv_security"-->
        <!--style="@style/more_item_style"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="44dip"-->
        <!--android:drawableRight="@drawable/aliwx_arrow"-->
        <!--android:text="@string/security" />-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/divide"
        />

    <TextView
        android:id="@+id/tv_exit"
        style="@style/more_item_style"
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:gravity="center"
        android:text="@string/exit" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide"
        />


</LinearLayout>