<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:background="@color/white">

    <include
        android:id="@+id/title_bar"
        layout="@layout/titlebar" />

    <TextView android:id="@+id/tv_hide"
              android:layout_width="0dp"
              android:layout_height="0dp"
              android:background="@color/black"
              android:layout_centerVertical="true"
              android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/selfestimate"
        android:id="@+id/btn_self"
        android:layout_above="@+id/tv_hide"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/friendestimate"
        android:id="@+id/btn_friend"
        android:layout_below="@+id/btn_self"
        android:layout_alignRight="@+id/tv_hide"
        android:layout_alignEnd="@+id/tv_hide"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/orderestimate"
        android:id="@+id/btn_order"
        android:layout_below="@+id/btn_self"
        android:layout_toRightOf="@+id/tv_hide"
        android:layout_toEndOf="@+id/tv_hide"/>

    <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/imageView"-->
        <!--android:src="@drawable/ping"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_centerHorizontal="true"/>-->
</RelativeLayout>