<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right">


    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/item_popupwindows_addoneclassfriend"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/btn"
                android:textColor="@color/deep_gray"
                android:textSize="18sp"
                android:text="@string/addoneclassfriend"
                android:drawableLeft="@drawable/ic_search_black_24dp"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/bg_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/item_popupwindows_viewrelationnet"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/btn"
                android:text="@string/viewrelationnet"
                android:textColor="@color/deep_gray"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_search_black_24dp"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="vertical"
            android:id="@+id/lly_whocannotsee"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/border_gray" />
            <Button
                android:id="@+id/item_popupwindows_whocannotsee"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/btn"
                android:text="@string/whocannotsee"
                android:textColor="@color/deep_gray"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_search_black_24dp"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="vertical"
            android:id="@+id/lly_cannotsee"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/border_gray" />
            <Button
                android:id="@+id/item_popupwindows_cannotsee"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/btn"
                android:text="@string/cannotsee"
                android:textColor="@color/deep_gray"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_search_black_24dp"/>

        </LinearLayout>



        <LinearLayout
            android:id="@+id/lly_blacklist"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/border_gray" />
            <Button
                android:id="@+id/item_popupwindows_addblacklist"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/btn"
                android:text="@string/addblacklist"
                android:textColor="@color/deep_gray"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_search_black_24dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="vertical"
            android:id="@+id/lly_cannotseecancle"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/border_gray" />
            <Button
                android:id="@+id/item_popupwindows_cannotseecancle"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/btn"
                android:text="@string/cannotseecancle"
                android:textColor="@color/deep_gray"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_search_black_24dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="vertical"
            android:id="@+id/lly_whocannotseecancle"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/border_gray" />
            <Button
                android:id="@+id/item_popupwindows_whocannotseecancle"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/btn"
                android:text="@string/whocannotseecancle"
                android:textColor="@color/deep_gray"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_search_black_24dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="vertical"
            android:id="@+id/lly_removeblacklist"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/border_gray" />
            <Button
                android:id="@+id/item_popupwindows_removeblacklist"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/btn"
                android:text="@string/removeblacklist"
                android:textColor="@color/deep_gray"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_search_black_24dp"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/border_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/item_popupwindows_report"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/btn"
                android:text="@string/report"
                android:textColor="@color/deep_gray"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_search_black_24dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout >