<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!--<View-->
        <!--android:id="@+id/mask"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="#80000000"-->
        <!--/>-->
    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:textColor="@color/deep_gray"
                android:textSize="25sp"
                android:text="@string/sex"
                android:gravity="center_vertical"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sexmale"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/white"
                android:textColor="@color/deep_gray"
                android:textSize="18sp"
                android:text="@string/male"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"

                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/bg_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_sexfemale"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/white"
                android:textColor="@color/deep_gray"
                android:textSize="18sp"
                android:text="@string/female"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/bg_gray" />

        </LinearLayout>

</RelativeLayout>